--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,29 +13,18 @@
  }
 
  .countdownContainer{
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-50%);
      text-align: center;
-     background: #ddd;
      border: 1px solid #999;
      padding: 10px;
      box-shadow: 0 0 5px 3px #ccc;
-
  }
 
  .info{
      font-size: 80px;
  }
 
- body{
-
- }
  .jumbotron{
      text-align:center;
-     color: white;
-
  }
  h1{
      font-size: 60px;
@@ -50,4 +39,8 @@
  #news-team{
      margin-left: 175px;
      margin-right: 175px;
+ }
+
+ .content {
+     max-height: 500px;
  }
