--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,7 +49,7 @@
      text-align: center;
      border: 1px solid #999;
      padding: 10px;
-     margin-top: 10px;
+     margin-top: 18px;
      /*box-shadow: 0 0 5px 3px #ccc;*/
  }
 
@@ -115,5 +115,14 @@
      font-size: 16px;
 }
 
+.country-button{
+     margin-top:8px;
+}
 
+.video-team{
+         margin-top: 18px;
+}
 
+.collapsible {
+     margin: 18px;
+}
